wip: extending to json and google sheets.

--- a/src/components/app/AppShell.astro
+++ b/src/components/app/AppShell.astro
@@ -1,14 +1,19 @@
 ---
-import Posthog from "../analytics/Posthog.astro";
-import Footer from "./Footer.astro";
-import Navbar from "./Navbar.astro";
-import Banner from "./header/Banner.astro";
+import NavbarAppShell from "./NavbarAppShell.astro";
+import SidebarAppShell from "./SidebarAppShell.astro";
+import config from "@util/themeConfig";
 ---
 
 <div>
-  <Banner />
-  <Navbar />
-  <slot />
-  <Footer />
-  <Posthog />
+  {
+    config.general.layout === "side" ? (
+      <SidebarAppShell>
+        <slot />
+      </SidebarAppShell>
+    ) : (
+      <NavbarAppShell>
+        <slot />
+      </NavbarAppShell>
+    )
+  }
 </div>
